@@ -1,3 +1,8 @@
+2002-11-14  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* src/mainwindow.cc (on_busy_action_pulse): Simplify by reducing
+	the amount of if-branches.
+
 2002-11-13  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* src/sharedptr.h: Reimplement the static member templates
